# letterboxd-for-goodreads

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yml  technical-decisions-final.md
backend/: .env.example  CLAUDE.md  alembic.ini  pyproject.toml  requirements.txt
backend/api/: config.py  database.py  deps.py  errors.py  main.py  model_stubs.py  pagination.py  utils.py
backend/migrations/: env.py
backend/models/: __init__.py  base.py  social.py  taste_match.py  user.py  user_book.py  work.py
backend/services/: affiliate_service.py  apns.py  book_service.py  challenge_service.py  content_tag_service.py  content_tags.py  discover_service.py  export_service.py  feed_service.py  import_service.py  invite_service.py  kindle_import_service.py  kobo_import_service.py  moderation_service.py  notification_service.py  observability.py  popular_service.py  r2_storage.py  report_service.py  reserved_usernames.py  series_service.py  shelf_service.py  social_service.py  stats_service.py  user_book_service.py  user_service.py
backend/tests/: conftest.py  test_account_deletion.py  test_admin.py  test_affiliate.py  test_auth.py  test_books.py  test_challenges.py  test_cold_start.py  test_content_tags.py  test_discovery.py  test_export.py  test_feed.py  test_import.py  test_kindle_import.py  test_models.py  test_moderation.py  test_notifications.py  test_observability.py  test_privacy.py  test_reports.py  test_reserved_usernames.py  test_series.py  test_shelves.py  (+6 more)
pipeline/: .env.example  CLAUDE.md  __init__.py  config.py  db.py  models.py  pyproject.toml  requirements.txt
(+261 files in other folders)
