[project]
name = "shelf-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# model_stubs.py uses Optional/List for Python 3.9 SQLAlchemy compat (Mapped[] evaluated at runtime)
"api/model_stubs.py" = ["UP006", "UP007", "UP035", "UP045"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
