[project]
name = "shelf-pipeline"
version = "0.1.0"
description = "Shelf data pipeline — Open Library import, cover processing, and sync jobs"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
